--- a/templates/answerfile.katello-installer.yaml.j2
+++ b/templates/answerfile.katello-installer.yaml.j2
@@ -23,3 +23,24 @@
     unattended: true
     admin_username: "{{ satellite_deployment_admin_username }}"
     admin_password: "{{ satellite_deployment_admin_password }}"
+  capsule:
+    register_in_foreman: false
+    pulp_master: true
+    puppet: true
+    puppetca: true
+    templates: false
+    tftp: false
+    bmc: false
+    bmc_default_provider: ipmitool
+    dhcp: false
+    dns: false
+  "foreman::plugin::bootdisk": false
+  "foreman::plugin::discovery": true
+  "foreman::plugin::hooks": true
+  "foreman::plugin::tasks": true
+  "foreman::plugin::chef": false
+  "foreman::plugin::default_hostgroup": false
+  "foreman::plugin::puppetdb": false
+  "foreman::plugin::setup": false
+  "foreman::plugin::templates": false
+  "katello::plugin::gutterball": true
