/var/lib/puppet/ssl/certs/ca.pem does not exist, HTTPd doesn't start.

--- a/templates/answerfile.katello-installer.yaml.j2
+++ b/templates/answerfile.katello-installer.yaml.j2
@@ -24,7 +24,7 @@
     admin_username: "{{ satellite_deployment_admin_username }}"
     admin_password: "{{ satellite_deployment_admin_password }}"
   capsule:
-    register_in_foreman: false
+    register_in_foreman: true
     pulp_master: true
     puppet: true
     puppetca: true
