Symbols, not strings.

--- a/templates/email.yaml.j2
+++ b/templates/email.yaml.j2
@@ -1,6 +1,6 @@
 ---
 production:
-{%- if satellite_deployment_email_method == "smtp" -%}
+{%- if satellite_deployment_email_method == ":smtp" -%}
   delivery_method: :smtp
   smtp_settings:
     enable_starttls_auto: {{ satellite_deployment_email_smtp_starttls_auto }}
@@ -13,7 +13,7 @@ production:
     password: {{ satellite_deployment_email_smtp_password }}
     {%- endif -%}
 {%- endif -%}
-{%- if satellite_deployment_email_method == "sendmail" -%}
+{%- if satellite_deployment_email_method == ":sendmail" -%}
   delivery_method: :sendmail
   sendmail_settings:
     arguments: "-i -t -G"
