--- a/templates/email.yaml.j2
+++ b/templates/email.yaml.j2
@@ -1,6 +1,6 @@
 ---
 production:
-{%- if satellite_deployment_email_method == ":smtp" -%}
+{% if satellite_deployment_email_method == ":smtp" -%}
   delivery_method: :smtp
   smtp_settings:
     enable_starttls_auto: {{ satellite_deployment_email_smtp_starttls_auto }}
@@ -11,10 +11,10 @@ production:
     {% if satellite_deployment_email_smtp_username is defined -%}
     user_name: {{ satellite_deployment_email_smtp_username }}
     password: {{ satellite_deployment_email_smtp_password }}
-    {%- endif -%}
-{%- endif -%}
-{%- if satellite_deployment_email_method == ":sendmail" -%}
+    {% endif -%}
+{% endif -%}
+{% if satellite_deployment_email_method == ":sendmail" -%}
   delivery_method: :sendmail
   sendmail_settings:
     arguments: "-i -t -G"
-{%- endif -%}
+{% endif -%}
