--- a/templates/publish_content.rb.j2
+++ b/templates/publish_content.rb.j2
@@ -4,7 +4,7 @@ require 'time'
 require 'rest-client'
 require 'json'
 
-ME = '{{ satellite_deployment_hostname_full }}"
+ME = '{{ satellite_deployment_hostname_full }}'
 URL = "https://#{ME}"
 ORG_NAME = '{{ satellite_deployment_organization }}'
 CV_NAME = 'default'
